--- a/forum/forum.html
+++ b/forum/forum.html
@@ -51,7 +51,7 @@
             <div class="row g-4">
                 <div class="col-lg-3">
                     <div class="sidebar-card mb-3">
-                        <h6 class="fw-bold mb-3">Category Filter</h6>
+                        <h6 class="fw-bold mb-3">Category</h6>
                         <div class="d-flex flex-column gap-2" id="forumFilters">
                             <button class="filter-btn active" data-cat="ALL" onclick="filterPosts('ALL')">• ALL</button>
                             <button class="filter-btn" data-cat="READING" onclick="filterPosts('READING')">• READING</button>
