--- a/assign/resource/resource.html
+++ b/assign/resource/resource.html
@@ -43,7 +43,7 @@
     <main class="resource-main">   
         
         <p>resource</p>     
-        <p>bla bla bla bla bla blabla bla blabla bla blabla bla blabla bla bla</p>
+        <p>blah blah blah blah blah blah blah blah</p>
 
     </main>
     <!---main end-->
