--- a/assign/main/main.html
+++ b/assign/main/main.html
@@ -43,7 +43,7 @@
     <main class="home-main">   
         
         <p>HOME</p>     
-        <p>bla bla bla bla bla blabla bla blabla bla blabla bla blabla bla bla</p>
+        <p>blah blah blah blah blah blah blah blah</p>
 
     </main>
     <!---main end-->
