--- a/assign/profile/profile.html
+++ b/assign/profile/profile.html
@@ -43,7 +43,7 @@
     <main class="profile-main">   
         
         <p>profile</p>     
-        <p>bla bla bla bla bla blabla bla blabla bla blabla bla blabla bla bla</p>
+        <p>blah blah blah blah blah blah blah blah</p>
 
     </main>
     <!---main end-->
